--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -4,6 +4,28 @@ on:
     branches: [main]
   pull_request:
 jobs:
+  check:
+    strategy:
+      matrix:
+        module:
+          - .
+          - ./gcs
+          - ./s3
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v6
+      - id: setup-go
+        name: Setup Go 1.26
+        uses: actions/setup-go@v6
+        with:
+          go-version: '1.26'
+          check-latest: true
+      - name: Verify the Go module
+        working-directory: ${{ matrix.module }}
+        run: go mod tidy -diff
+      - name: Run go vet
+        working-directory: ${{ matrix.module }}
+        run: go vet ./...
   test:
     strategy:
       matrix:
@@ -23,9 +45,6 @@ jobs:
         with:
           go-version: ${{ matrix.go-version }}
           check-latest: true
-      - name: Verify the Go module
-        working-directory: ${{ matrix.module }}
-        run: go mod tidy -diff
       - name: Run all tests
         working-directory: ${{ matrix.module }}
         run: go test -race -v ./...
