--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,10 +15,10 @@ jobs:
     steps:
       - uses: actions/checkout@v6
       - id: setup-go
-        name: Setup Go 1.26
+        name: Setup Go
         uses: actions/setup-go@v6
         with:
-          go-version: '1.26'
+          go-version-file: ${{ matrix.module }}/go.mod
           check-latest: true
       - name: Verify the Go module
         working-directory: ${{ matrix.module }}
@@ -33,17 +33,14 @@ jobs:
           - .
           - ./gcs
           - ./s3
-        go-version:
-          - '1.25'
-          - '1.26'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
       - id: setup-go
-        name: Setup Go ${{ matrix.go-version }}
+        name: Setup Go
         uses: actions/setup-go@v6
         with:
-          go-version: ${{ matrix.go-version }}
+          go-version-file: ${{ matrix.module }}/go.mod
           check-latest: true
       - name: Run all tests
         working-directory: ${{ matrix.module }}
