--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,8 +18,9 @@ jobs:
         name: Setup Go
         uses: actions/setup-go@v6
         with:
-          go-version-file: ${{ matrix.module }}/go.mod
+          go-version: '1.25'
           check-latest: true
+          cache-dependency-path: ${{ matrix.module }}/go.sum
       - name: Verify the Go module
         working-directory: ${{ matrix.module }}
         run: go mod tidy -diff
